--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -123,9 +123,9 @@
                         <li><a href="{:url('admin/node/index')}"> 管理员节点管理</a></li>
                     </ul>
                 </li>
-                <li class="menu-list"><a href=""><i class="fa fa-cogs"></i> <span>Components</span></a>
+                <li class="menu-list"><a href=""><i class="fa fa-cogs"></i> <span>商铺信息管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="grids.html"> Grids</a></li>
+                        <li><a href="{:url('admin/buspower/index')}">查看商铺列表</a></li>
                         <li><a href="gallery.html"> Media Gallery</a></li>
                         <li><a href="calendar.html"> Calendar</a></li>
                         <li><a href="tree_view.html"> Tree View</a></li>
