--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -82,16 +82,25 @@
 
                     </ul>
                 </li>
-                {volist name ='cate' id="cate"}
-                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>{$cate.c_name}管理</span></a>
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>住宿管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/HotelCate/read',['id'=>$cate.id])}">{$cate.c_name}分类管理</a></li>
+                        <li><a href="{:url('admin/HotelCate/read',['id'=>'4'])}">住宿分类管理</a></li>
                     </ul>
                     <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/Hotel/index')}">{$cate.c_name}列表</a></li>
+                        <li><a href="{:url('admin/Hotel/index')}">住宿列表</a></li>
                     </ul>
                 </li>
-                {/volist}
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>旅游路线管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/RoutesCate/read',['id'=>'5'])}">旅游路线分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Routes/index')}">旅游路线列表</a></li>
+                    </ul>
+                </li>
+
                 <!--yjf-->
                  <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>活动管理</span></a>
                     <ul class="sub-menu-list">
@@ -899,7 +908,7 @@
     </div>
     <!-- main content end-->
    {/block}
-{block name='myjs'}
+
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="/static/app/admin/js/jquery-1.10.2.min.js"></script>
 <script src="/static/app/admin/js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -907,7 +916,7 @@
 <script src="/static/app/admin/js/bootstrap.min.js"></script>
 <script src="/static/app/admin/js/modernizr.min.js"></script>
 <script src="/static/app/admin/js/jquery.nicescroll.js"></script>
-
+    {block name='myjs'}
 <!--easy pie chart-->
 <script src="/static/app/admin/js/easypiechart/jquery.easypiechart.js"></script>
 <script src="/static/app/admin/js/easypiechart/easypiechart-init.js"></script>
