--- a/application/admin/view/user/cate.html
+++ b/application/admin/view/user/cate.html
@@ -3,7 +3,7 @@
 {block name="main"}
 <!--&lt;!&ndash; main content start&ndash;&gt;-->
 <!--<div class="main-content" >-->
-
+<a href="javascript:history.go(-1)" class=" btn-primary btn-lg">返回上一页</a>
 <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加管理员角色</button>
 <!--body wrapper start-->
 <div class="wrapper">
