--- a/application/admin/view/user/edit.html
+++ b/application/admin/view/user/edit.html
@@ -10,8 +10,8 @@
         <!--</div>-->
         <!-- page heading end-->
 
-        <!--body wrapper start-->
-        <div class="wrapper">
+<!--body wrapper start-->
+<div class="wrapper">
 
             <div class="row">
                 <div class="col-md-4">
@@ -101,6 +101,9 @@
 
                                             <button type="submit" class="btn btn-default">提交</button>
                                         </form>
+                                        <br>
+
+                                        <a href="javascript:history.go(-1)" class=" btn-primary btn-lg">返回</a>
 
                                     </div>
                                 </div>
