--- a/application/admin/view/user/index.html
+++ b/application/admin/view/user/index.html
@@ -3,7 +3,8 @@
     <!--&lt;!&ndash; main content start&ndash;&gt;-->
     <!--<div class="main-content" >-->
 
-        <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加管理员</button>
+<a href="javascript:history.go(-1)" class=" btn-primary btn-lg">返回上一页</a>
+<button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加管理员</button>
         <!--body wrapper start-->
         <div class="wrapper">
             <div class="row">
@@ -226,6 +227,7 @@
             }
         });
     }
+
 
 
 </script>
