--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -32,53 +32,8 @@
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_common.css">
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_login.css">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-    <!--end-yjf-->
-
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-<!--模态框中的内容-->
-<div>
-  <div class="login_cont">
-    <div class="login_nav">
-      <div class="nav_slider">
-        <a href="#" class="signup focus">注册</a>
-        <a href="#" class="signin">登录</a>
-      </div>
-    </div>
-
-    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
-
-      <div class="input_signup active form-group">
-        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
-        <div class="hint">请填写符合格式的用户名</div>
-        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
-        <div class="hint">请填写邮箱</div> -->
-        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
-        <div class="hint">请填写手机号</div>
-
-        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
-        <div class="hint">请填写符合格式的密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
-        <div class="hint">请再次输入密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
-        <div class="hint">请再次输入密码</div>
-
-        <div><img src="{:captcha_src()}" alt="captcha" /></div>
-
-        <input type="submit" id="submit" class="button" name="button" value="注册">
-        </br>
-      </div>
-    </form>
-
-<<<<<<< HEAD
     <style>
-       
+
         #chat{
             width:200px;
             height: 300px;
@@ -133,22 +88,68 @@
         #server{
             margin: 2px;
         }
-           </style>
+    </style>
 
     {css href="/static/app/index/css/reset.css"}
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
-    {css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}
+    <!--{css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
+
+    <!--end-yjf-->
+</head>
+<!--yjf-->
+ <!-- 会员登录注册 Modal -->
+<!-- Middle modal -->
+<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
+  <div class="modal-dialog modal-md" role="document">
+    <div class="modal-content">
+<!--模态框中的内容-->
+<div>
+  <div class="login_cont">
+    <div class="login_nav">
+      <div class="nav_slider">
+        <a href="#" class="signup focus">注册</a>
+        <a href="#" class="signin">登录</a>
+      </div>
+    </div>
+
+    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
+
+      <div class="input_signup active form-group">
+        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
+        <div class="hint">请填写符合格式的用户名</div>
+        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
+        <div class="hint">请填写邮箱</div> -->
+        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
+        <div class="hint">请填写手机号</div>
+
+        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
+        <div class="hint">请填写符合格式的密码</div>
+
+        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
+        <div class="hint">请再次输入密码</div>
+
+        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
+        <div class="hint">请再次输入密码</div>
+
+        <div><img src="{:captcha_src()}" alt="captcha" /></div>
+
+        <input type="submit" id="submit" class="button" name="button" value="注册">
+        </br>
+      </div>
+    </form>
+
+
 
 
  
-=======
-    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
+
+    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserformw'>
       <div class="input_signin">
         <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username">
         <div class="hint" >请输入用户名</div>
         <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password">
         <div class="hint">请输入密码</div>
->>>>>>> origin/zhangsan
+
 
         <div><img src="{:captcha_src()}" alt="captcha" /></div>
 
@@ -161,10 +162,10 @@
       </div>
     </form>
   </div>
-  <script type="text/javascript" src="/js/login.js"></script>
-  <script type="text/javascript" src="/js/form.js"></script> 
-  <script type="text/javascript" src="js/config.js"></script> 
-  <script type="text/javascript" src="/js/login_ajax.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_form.js"></script>
+  <script type="text/javascript" src="/static/app/indexjs/login_config.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_ajax.js"></script>
 </div>
       <!--模态框中的内容结束-->
     </div>
@@ -172,8 +173,6 @@
 </div>
 <!--yjf-->
 
-
-</head>
 <!--<style>
     #body{
       background: url('images/bk.png');
