--- a/application/admin/view/bus/busEdit.html
+++ b/application/admin/view/bus/busEdit.html
@@ -7,8 +7,10 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-1"></div>
         <div class="col-md-5">
-            <h3>店铺基本信息</h3>
-            <button type="submit" class="btn btn-success" id="edit">修改基本信息</button>
+            <button type="submit" class="btn btn-success" id="info">基本信息</button>
+            <button type="submit" class="btn btn-success" id="edit">修改资料</button>
+            <button type="submit" class="btn btn-success" id="editpass">密码重置</button>
+            <a href="{:url('admin/BusIndex/index')}" class="btn btn-success" id="back">店铺首页>>></a>
         </div>
     </div>
     <div class="row">
