--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -134,7 +134,7 @@
                     </ul>
                 </li>
 
-                <li><a href="fontawesome.html"><i class="fa fa-bullhorn"></i> <span>Fontawesome</span></a></li>
+                <li><a href="{:url('admin/Comment/index')}"><i class="fa fa-bullhorn"></i> <span>评论管理</span></a></li>
 
                 <li class="menu-list"><a href=""><i class="fa fa-envelope"></i> <span>Mail</span></a>
                     <ul class="sub-menu-list">
@@ -197,7 +197,7 @@
                     </ul>
                 </li>
         
-                <li><a href="login.html"><i class="fa fa-sign-in"></i> <span>Login Page</span></a></li>
+                <li><a href="{:url('admin/index/loginexit')}"><i class="fa fa-sign-in"></i> <span>安全退出</span></a></li>
 
             </ul>
             <!--sidebar nav end-->
