--- a/application/admin/view/user/catepower.html
+++ b/application/admin/view/user/catepower.html
@@ -18,36 +18,41 @@
 
 <div class="col-lg-12">
 
-        <section class="panel">
-            <header class="panel-heading">
-                权限节点选项
-                <span class="tools pull-right">
+    <section class="panel">
+        <header class="panel-heading">
+            权限节点选项
+            <span class="tools pull-right">
                             <a class="fa fa-chevron-down" href="javascript:;"></a>
                             <a class="fa fa-times" href="javascript:;"></a>
                          </span>
-            </header>
-
-            <form action="{:url('admin/cate/nodeedit')}" method="post">
-                <!--<input type="hidden" name="_method" value="PUT">-->
-                {volist name="node" id="vo"}
-                <div class="col-md-3">
-                    <div class="flat-green single-row">
-                        <div class="checkbox">
-                            <input type="checkbox" name="{$vo.id}" {if condition="$vo['is'] eq '1'"} checked {/if}>
-
-                            <label>{$vo.name}</label>
-                        </div>
+        </header>
+        <button onclick="ck(1)">全选</button>　
+        <button onclick="ck(2)">全取消</button>　
+        <button onclick="ck(3)">反选</button>　
+        <hr>
+        <form action="{:url('admin/cate/nodeedit')}" method="post">
+            <!--<input type="hidden" name="_method" value="PUT">-->
+            {volist name="node" id="vo"}
+            <div class="col-md-3">
+                <div class="flat-green single-row">
+                    <div class="checkbox">
+                        <input type="checkbox" name="{$vo.id}"  class="check" {if condition="$vo['is'] eq '1'"} checked {/if}>
+                        <label>{$vo.name}</label>
                     </div>
                 </div>
-                {/volist}
-                <input type="hidden" name="rid" value="{$rid}"></input>
-                <br>
-                <br>
-                <br>
-                <div class="row"></div>
-                <button class="btn btn-success">确认修改</button>
-            </form>
-
+            </div>
+            {/volist}
+            <input type="hidden" name="rid" value="{$rid}">
+            <br>
+            <br>
+            <br>
+            <div class="row"></div>
+            <hr>
+            　　　<button class="btn btn-success">确认修改</button>
+            <br>
+            <br>
+        </form>
+    </section>
 </div>
 
 
@@ -98,5 +103,19 @@
 
 <!--common scripts for all pages-->
 <script src="/static/app/admin/js/scripts.js"></script>
-
+<script>
+    var check = document.getElementsByClassName('check');
+    function  ck(m) {
+        for (var i = 0; i < check.length; i++) {
+            switch(m){
+                case 1:check[i].checked=true;break;
+                case 2:check[i].checked=false;break;
+                case 3:check[i].checked=!check[i].checked;break;
+            }
+            console.log(i);
+            console.log(check[i]);
+        }
+    }
+</script>
 {/block}
+
