--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,47 +36,7 @@
 
     <!--end-yjf-->
 
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-<!--模态框中的内容-->
-<div>
-  <div class="login_cont">
-    <div class="login_nav">
-      <div class="nav_slider">
-        <a href="#" class="signup focus">注册</a>
-        <a href="#" class="signin">登录</a>
-      </div>
-    </div>
 
-    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
-
-      <div class="input_signup active form-group">
-        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
-        <div class="hint">请填写符合格式的用户名</div>
-        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
-        <div class="hint">请填写邮箱</div> -->
-        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
-        <div class="hint">请填写手机号</div>
-
-        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
-        <div class="hint">请填写符合格式的密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
-        <div class="hint">请再次输入密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
-        <div class="hint">请再次输入密码</div>
-
-        <div><img src="{:captcha_src()}" alt="captcha" /></div>
-
-        <input type="submit" id="submit" class="button" name="button" value="注册">
-        </br>
-      </div>
-    </form>
 
     <style>
 
@@ -146,99 +105,8 @@
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
     <!--{css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
 
-
-
-    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
-
-    <!--end-yjf-->
 </head>
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-<!--模态框中的内容-->
-<div>
-  <div class="login_cont">
-    <div class="login_nav">
-      <div class="nav_slider">
-        <a href="#" class="signup focus">注册</a>
-        <a href="#" class="signin">登录</a>
-      </div>
-    </div>
 
-    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
-
-      <div class="input_signup active form-group">
-        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
-        <div class="hint">请填写符合格式的用户名</div>
-        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
-        <div class="hint">请填写邮箱</div> -->
-        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
-        <div class="hint">请填写手机号</div>
-
-        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
-        <div class="hint">请填写符合格式的密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
-        <div class="hint">请再次输入密码</div>
-
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
-        <div class="hint">请再次输入密码</div>
-
-        <div><img src="{:captcha_src()}" alt="captcha" /></div>
-
-        <input type="submit" id="submit" class="button" name="button" value="注册">
-        </br>
-      </div>
-    </form>
-
-
-
-
- 
-
-    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserformw'>
-
-      <div class="input_signin">
-        <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username">
-        <div class="hint" >请输入用户名</div>
-        <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password">
-        <div class="hint">请输入密码</div>
-
-
-        <div><img src="{:captcha_src()}" alt="captcha" /></div>
-
-        <input type="submit" id="button" class="button" name="button" value="登录" >
-        <div class="forget">
-          <a href="forget.html">忘记密码？</a>
-          </br>
-          </br>
-        </div>
-      </div>
-    </form>
-  </div>
-  <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
-  <script type="text/javascript" src="/static/app/index/js/login_form.js"></script>
-
-
-  <script type="text/javascript" src="/static/app/index/js/login_config.js"></script>
-  <script type="text/javascript" src="/static/app/index/js/login_login_ajax.js"></script>
-
-</div>
-      <!--模态框中的内容结束-->
-    </div>
-  </div>
-</div>
-<!--yjf-->
-
-<!--<style>
-    #body{
-      background: url('images/bk.png');
-      background-size: 100% 5000px;
-    }
-</style>-->
 
 <body>
   <!--gt Wrapper Start-->  
@@ -446,15 +314,6 @@
               </button>
                 <ul>
                   <li class="active"><a href="javascript:avoid(0);">首页</a>
-                    <!-- <ul>
-                      <li><a href="index.html">Home 01</a></li>
-                      <li><a href="index-02.html">Home 02</a></li>
-                      <li><a href="index-revolution-slider.html">Home Revolution Slider</a></li>
-                      <li><a href="index-/static.html">Home /static Background</a></li>
-            <li><a href="index-/static-text-rotation.html">Home /static Text Rotation</a></li>
-                      <li><a href="index-video.html">Home Video Background</a></li>
-                      <li><a href="index-one-page.html">Home One Page</a></li>
-                    </ul> -->
                   </li>
                   
                   <li><a href="javascript:avoid(0);">精彩活动</a>
@@ -1560,6 +1419,8 @@
   <!--<script type="text/javascript" src="/static/app/index/js/socket.io.js"></script>-->
 
   {block name='myjs'}
+  <!--聊天室-->
+  <script type="text/javascript" src="/static/app/index/js/socket.io.js"></script>
   <script type="text/javascript">
       $('.online').click(function(){
           $('#chat').css('display','block');
@@ -1693,80 +1554,81 @@
             p1.innerHTML = ' × 请输入1-12位的数字、字母或下划线组成的店铺名字';
             p1.style.color = 'red';
             return false;
-        }else{
+        } else {
             p1.style.color = '#0a0';
             p1.innerHTML = '√ ';
         }
 
-        var person=document.getElementById('inputPerson').value;
-        var p2=document.getElementById('p2');
+        var person = document.getElementById('inputPerson').value;
+        var p2 = document.getElementById('p2');
         //验证负责人是否符合 6-12位的数字字母下划线
-        if (person.match(/^\w{1,12}$/)===null) {
-            p2.innerHTML='× 请输入1-12位的数字、字母或下划线组成的名字';
-            p2.style.color='red';
+        if (person.match(/^\w{1,12}$/) === null) {
+            p2.innerHTML = '× 请输入1-12位的数字、字母或下划线组成的名字';
+            p2.style.color = 'red';
             return false;
-        }else{
+        } else {
             p2.style.color = '#0a0';
             p2.innerHTML = '√ ';
         }
         //密码
-        var pass=document.getElementById('inputPass').value;
-        var p3=document.getElementById('p3');
+        var pass = document.getElementById('inputPass').value;
+        var p3 = document.getElementById('p3');
         //验证密码是否符合 6-18位的数字
-        if (pass.match(/^\w{6,18}$/)===null) {
-            p3.innerHTML=' × 请输入6-18位的数字、字母或下划线组成的密码';
-            p3.style.color='red';
+        if (pass.match(/^\w{6,18}$/) === null) {
+            p3.innerHTML = ' × 请输入6-18位的数字、字母或下划线组成的密码';
+            p3.style.color = 'red';
             return false;
-        }else{
+        } else {
             p3.style.color = '#0a0';
             p3.innerHTML = '√ ';
         }
         //确认密码
-        var repass=document.getElementById('inputRepass').value;
-        var p8=document.getElementById('p8');
-        if (pass!==repass) {
-            p8.innerHTML=' × 两次输入不一致';
-            p8.style.color='red';
+        var repass = document.getElementById('inputRepass').value;
+        var p8 = document.getElementById('p8');
+        if (pass !== repass) {
+            p8.innerHTML = ' × 两次输入不一致';
+            p8.style.color = 'red';
             return false;
-        }else{
+        } else {
             p8.style.color = '#0a0';
             p8.innerHTML = '√ ';
         }
         //手机号
-        var phone=document.getElementById('inputPhone').value;
-        var p4=document.getElementById('p4');
-        if (phone.match(/^\d{11}$/)===null) {
-            p4.innerHTML=' × 请输入11位数字的手机号码';
-            p4.style.color='red';
+        var phone = document.getElementById('inputPhone').value;
+        var p4 = document.getElementById('p4');
+        if (phone.match(/^\d{11}$/) === null) {
+            p4.innerHTML = ' × 请输入11位数字的手机号码';
+            p4.style.color = 'red';
             return false;
-        }else{
+        } else {
             p4.style.color = '#0a0';
             p4.innerHTML = '√ ';
         }
 
         //地区
-        var adress=document.getElementById('city-picker3').value;
-        var p5=document.getElementById('p5');
-        var arr=adress.split('/');
-        if (arr.length<2) {
-            p5.innerHTML=' × 请选择完整的省/市/区';
-            p5.style.color='red';
+        var adress = document.getElementById('city-picker3').value;
+        var p5 = document.getElementById('p5');
+        var arr = adress.split('/');
+        if (arr.length < 2) {
+            p5.innerHTML = ' × 请选择完整的省/市/区';
+            p5.style.color = 'red';
             return false;
-        }else{
+        } else {
             p5.style.color = '#0a0';
             p5.innerHTML = '√ ';
         }
 
         //同意条款
-        var checkbox=document.getElementById('checkbox');
-        var p7=document.getElementById('p7');
+        var checkbox = document.getElementById('checkbox');
+        var p7 = document.getElementById('p7');
         if (!checkbox.checked) {
-            p7.innerHTML=' × 请认真阅读并同意入驻规则';
-            p7.style.color='red';
+            p7.innerHTML = ' × 请认真阅读并同意入驻规则';
+            p7.style.color = 'red';
             return false;
             p7.style.color = '#0a0';
             p7.innerHTML = '√ 通过';
         }
+    }
 
       //ajax验证手机号和店铺名称
      // insertAjax(p1);
