--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -26,14 +26,16 @@
     <link href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css" />
     <link href="/static/app/index/css/zzsc.css" rel="stylesheet" type="text/css" />
 
- <!--yjf-->
-<!--     <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
+    <!--yjf-->
+    <!--     <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
+        <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
+        <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_common.css">
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_login.css">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <!--end-yjf-->
+    <!--日期-->
+    <link href="/static/app/index/css/daterangepicker-bs3.css" rel="stylesheet">
 
 <!--yjf-->
  <!-- 会员登录注册 Modal -->
@@ -161,7 +163,7 @@
   </div>
   <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
   <script type="text/javascript" src="/static/app/index/js/login_form.js"></script>
-  <script type="text/javascript" src="/static/app/indexjs/login_config.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_config.js"></script>
   <script type="text/javascript" src="/static/app/index/js/login_login_ajax.js"></script>
 </div>
       <!--模态框中的内容结束-->
