--- a/application/admin/view/hotel/hotelList.html
+++ b/application/admin/view/hotel/hotelList.html
@@ -2,19 +2,19 @@
 
 {block name="main"}
 <!-- page heading start-->
-<button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加商品</button>
+<button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加住宿</button>
 <div class="page-heading">
     <h3>
-        Editable Table
+        住宿列表
     </h3>
     <ul class="breadcrumb">
         <li>
-            <a href="#">Dashboard</a>
+            <a href="#">住宿</a>
         </li>
         <li>
-            <a href="#">Data Table</a>
+            <a href="#">住宿列表</a>
         </li>
-        <li class="active"> Editable Table </li>
+        <li class="active">住宿列表</li>
     </ul>
 </div>
 <!-- page heading end-->
@@ -148,6 +148,16 @@
                             <label class="col-sm-3">
                             <span>
                                 <input type="checkbox" name="is_sale" checked > 是否上架
+                            </span>
+                            </label>
+                            <label class="col-sm-3">
+                            <span>
+                                <input type="checkbox" name="is_wifi" checked > 是否有WIFI
+                            </span>
+                            </label>
+                            <label class="col-sm-3">
+                            <span>
+                                <input type="checkbox" name="is_park" checked > 是否有停车场
                             </span>
                             </label>
                         </div>
