--- a/application/admin/view/hotel/hotelListdetail.html
+++ b/application/admin/view/hotel/hotelListdetail.html
@@ -5,16 +5,16 @@
 
 <div class="page-heading">
     <h3>
-        Editable Table
+        住宿详情列表详情页
     </h3>
     <ul class="breadcrumb">
         <li>
-            <a href="#">Dashboard</a>
+            <a href="#">住宿</a>
         </li>
         <li>
-            <a href="#">Data Table</a>
+            <a href="#">住宿列表</a>
         </li>
-        <li class="active"> Editable Table </li>
+        <li class="active">住宿详情列表详情页</li>
     </ul>
 </div>
 <!-- page heading end-->
