--- a/application/admin/view/hotel/hotelpic.html
+++ b/application/admin/view/hotel/hotelpic.html
@@ -2,6 +2,7 @@
 
 {block name="main"}
 <!-- page heading start-->
+<a href="javascript:history.go(-1)" class=" btn-primary btn-lg">返回上一页</a>
 <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加图片</button>
 <div class="page-heading">
     <h3>
