--- a/application/admin/view/hotel/hotelcateList.html
+++ b/application/admin/view/hotel/hotelcateList.html
@@ -1,20 +1,20 @@
-{extend name="index/busIndex"}
+{extend name="index/index"}
 
 {block name="main"}
 <!-- page heading start-->
 <button  class=" btn-primary btn-lg" data-toggle="modal" data-target="#myModal">添加分类</button>
 <div class="page-heading">
     <h3>
-        分类管理
+        住宿分类管理
     </h3>
     <ul class="breadcrumb">
         <li>
-            <a href="#">Dashboard</a>
+            <a href="#">住宿</a>
         </li>
         <li>
-            <a href="#">Data Table</a>
+            <a href="#">分类</a>
         </li>
-        <li class="active"> Editable Table </li>
+        <li class="active">分类管理</li>
     </ul>
 </div>
 <!-- page heading end-->
@@ -32,8 +32,10 @@
                      </span>
                 </header>
                 <div class="panel-body">
+                    {if condition="empty($list)"}
+                    <p style="text-align: center">此栏目下暂无分类,去添加吧~~~</p>
+                    {else /}
                     <div class="adv-table editable-table ">
-
                     </div>
                     <div class="space15"></div>
                     <table class="table table-striped table-hover table-bordered" id="editable-sample">
@@ -45,21 +47,20 @@
 
                         </tr>
                         </thead>
-
                         <tbody>
                         {volist name="list" id="v" key="k"}
                         <tr>
                             <td>{$k}</td>
                             <td align="center" >{$v.h_name}</td>
                             <td class="col-md-4">
-                                <a class=" btn btn-primary" href="{:url('admin/hotelcate/edit',['id'=>$v['id']])}">修改分类信息</a>
+                                <a class=" btn btn-primary" href="{:url('admin/hotelcate/edit',['id'=>$v['id']])}">修改分类</a>
                                 <button class=" btn btn-danger del-btn" cate-id="{$v.id}" >删除分类</button>
                             </td>
-
                         </tr>
                         {/volist}
                         </tbody>
                     </table>
+                    {/if}
                 </div>
         </div>
 
@@ -78,7 +79,7 @@
                     <form action="{:url('admin/hotelcate/save')}" method="post" enctype="multipart/form-data">
                             <label for="exampleInputEmail1">分类名称</label>
                             <input type="text" name="h_name" class="form-control" id="exampleInputEmail1" placeholder="请输入分类名称">
-                            <input type="hidden" name="c_id" value="{$v.c_id}">
+                            <input type="hidden" name="c_id" value="4">
                         </div>
 
                         <button type="submit" class="btn btn-default">提交</button>
@@ -149,7 +150,7 @@
         function delAjax(id, obj) {
             $.ajax({
                 type: 'delete', // DELETE请求方式
-                url: '/HotelCate/' + id,
+                url: '/Hotelcate/' + id,
                 dataType: 'json',
                 success: function (data) {
                     console.log(data);
