--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -84,9 +84,7 @@
                 </li>
 
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>住宿管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/HotelCate/read',['id'=>'4'])}">住宿分类管理</a></li>
-                    </ul>
+
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Hotel/index')}">住宿列表</a></li>
                     </ul>
@@ -94,20 +92,22 @@
 
 
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>旅游路线管理</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/RoutesCate/read',['id'=>'5'])}">旅游路线分类管理</a></li>
-                    </ul>
+
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Routes/index')}">旅游路线列表</a></li>
 
                     </ul>
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>特产美食</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="{:url('admin/FoodCate/read',['id'=>'6'])}">分类管理</a></li>
-                    </ul>
+
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Food/index')}">商品列表</a></li>
+                    </ul>
+                </li>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>景区管理</span></a>
+
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Scenery/index')}">景区列表</a></li>
                     </ul>
                 </li>
 
