--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -134,13 +134,39 @@
                     </ul>
                 </li>
 
-                <li><a href="fontawesome.html"><i class="fa fa-bullhorn"></i> <span>Fontawesome</span></a></li>
-
-                <li class="menu-list"><a href=""><i class="fa fa-envelope"></i> <span>Mail</span></a>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>住宿管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="mail.html"> Inbox</a></li>
-                        <li><a href="mail_compose.html"> Compose Mail</a></li>
-                        <li><a href="mail_view.html"> View Mail</a></li>
+                        <li><a href="{:url('admin/Hotelcate/read',['id'=>'4'])}">住宿分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Hotellist/index')}">住宿列表</a></li>
+                    </ul>
+                </li>
+
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>旅游路线管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Routescate/read',['id'=>'5'])}">旅游路线分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Routeslist/index')}">旅游路线列表</a></li>
+
+                    </ul>
+                </li>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>特产美食</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Foodcate/read',['id'=>'6'])}">分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Foodlist/index')}">商品列表</a></li>
+                    </ul>
+                </li>
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>景区管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Scenerycate/read',['id'=>'1'])}">景区分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/Scenerylist/index')}">景区列表</a></li>
                     </ul>
                 </li>
 
