--- a/application/admin/view/user/catepower.html
+++ b/application/admin/view/user/catepower.html
@@ -26,26 +26,32 @@
                             <a class="fa fa-times" href="javascript:;"></a>
                          </span>
             </header>
-
+            <button onclick="ck(1)">全选</button>　
+            <button onclick="ck(2)">全取消</button>　
+            <button onclick="ck(3)">反选</button>　
+            <hr>
             <form action="{:url('admin/cate/nodeedit')}" method="post">
                 <!--<input type="hidden" name="_method" value="PUT">-->
                 {volist name="node" id="vo"}
                 <div class="col-md-3">
                     <div class="flat-green single-row">
                         <div class="checkbox">
-                            <input type="checkbox" name="{$vo.id}" {if condition="$vo['is'] eq '1'"} checked {/if}>
+                            <input type="checkbox" name="{$vo.id}" {if condition="$vo['is'] eq '1'"} checked {/if} class="check">
 
                             <label>{$vo.name}</label>
                         </div>
                     </div>
                 </div>
                 {/volist}
-                <input type="hidden" name="rid" value="{$rid}"></input>
+                <input type="hidden" name="rid" value="{$rid}">
                 <br>
                 <br>
                 <br>
                 <div class="row"></div>
-                <button class="btn btn-success">确认修改</button>
+                <hr>
+                　　　<button class="btn btn-success">确认修改</button>
+                <br>
+                <br>
             </form>
 
 </div>
@@ -98,5 +104,16 @@
 
 <!--common scripts for all pages-->
 <script src="/static/app/admin/js/scripts.js"></script>
-
+<script>
+    var check = document.getElementsByClassName('check');
+    function  ck(m) {
+        for (var i = 0; i < check.length; i++) {
+            switch(m){
+                case 1:check[i].checked=true;break;
+                case 2:check[i].checked=false;break;
+                case 3:check[i].checked=!check[i].checked;break;
+            }
+        }
+    }
+</script>
 {/block}
