--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -40,44 +40,44 @@
 <!--yjf-->
  <!-- 会员登录注册 Modal -->
 <!-- Middle modal -->
-<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-<!--模态框中的内容-->
-<div>
-  <div class="login_cont">
-    <div class="login_nav">
-      <div class="nav_slider">
-        <a href="#" class="signup focus">注册</a>
-        <a href="#" class="signin">登录</a>
-      </div>
-    </div>
+<!--<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">-->
+  <!--<div class="modal-dialog modal-md" role="document">-->
+    <!--<div class="modal-content">-->
+<!--&lt;!&ndash;模态框中的内容&ndash;&gt;-->
+<!--<div>-->
+  <!--<div class="login_cont">-->
+    <!--<div class="login_nav">-->
+      <!--<div class="nav_slider">-->
+        <!--<a href="#" class="signup focus">注册</a>-->
+        <!--<a href="#" class="signin">登录</a>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>
+    <!--<form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>-->
 
-      <div class="input_signup active form-group">
-        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">
-        <div class="hint">请填写符合格式的用户名</div>
-        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
-        <div class="hint">请填写邮箱</div> -->
-        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">
-        <div class="hint">请填写手机号</div>
+      <!--<div class="input_signup active form-group">-->
+        <!--<input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">-->
+        <!--<div class="hint">请填写符合格式的用户名</div>-->
+        <!--&lt;!&ndash; <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">-->
+        <!--<div class="hint">请填写邮箱</div> &ndash;&gt;-->
+        <!--<input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">-->
+        <!--<div class="hint">请填写手机号</div>-->
 
-        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">
-        <div class="hint">请填写符合格式的密码</div>
+        <!--<input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">-->
+        <!--<div class="hint">请填写符合格式的密码</div>-->
 
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">
-        <div class="hint">请再次输入密码</div>
+        <!--<input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">-->
+        <!--<div class="hint">请再次输入密码</div>-->
 
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">
-        <div class="hint">请再次输入密码</div>
+        <!--<input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">-->
+        <!--<div class="hint">请再次输入密码</div>-->
 
-        <div><img src="{:captcha_src()}" alt="captcha" /></div>
+        <!--<div><img src="{:captcha_src()}" alt="captcha" /></div>-->
 
-        <input type="submit" id="submit" class="button" name="button" value="注册">
-        </br>
-      </div>
-    </form>
+        <!--<input type="submit" id="submit" class="button" name="button" value="注册">-->
+        <!--</br>-->
+      <!--</div>-->
+    <!--</form>-->
 
     <style>
 
@@ -145,17 +145,17 @@
     {css href="/static/app/index/css/reset.css"}
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
     <!--{css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
-
-
-
-    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
-
-    <!--end-yjf-->
 </head>
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
+
+
+
+
+<!--end-yjf-->
+    <!--yjf-->
+<!-- 会员登录注册 Modal -->
+    <!-- Middle modal -->
+<form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
+    <div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
   <div class="modal-dialog modal-md" role="document">
     <div class="modal-content">
 <!--模态框中的内容-->
@@ -371,11 +371,15 @@
 
             <div class="gt_login_element">
               <!-- <a href="#"><i class="icon-lock"></i>登陆</a> -->
-              <a class="btn " data-toggle="modal" data-target=".bs-example-modal-md" ><i class="glyphicon glyphicon-flag"></i>注册/登录</a>
+                {if condition="empty(input('session.u_id'))"}
+                    <a class="btn " data-toggle="modal" data-target=".bs-example-modal-md" ><i class="glyphicon glyphicon-flag"></i>注册/登录</a>
+                {else /}
+                    <a href="#">欢迎您,{$user.u_username}</a>
+                {/if}
 
               <!-- <a href="#"><i class="glyphicon glyphicon-log-in"></i>注册</a> -->
              <!--  <a href="#"><i class="glyphicon glyphicon-log-in"></i>登陆</a> -->
-              <a href="#"><i class="glyphicon glyphicon-log-out"></i>退出</a>
+              <a href="{:url('index/index/loginout')}"><i class="glyphicon glyphicon-log-out"></i>退出</a>
               <a href="{:url('index/personal/index')}"><i class="glyphicon glyphicon-user"></i>个人中心</a>
               
             </div>
@@ -445,7 +449,7 @@
                 <span class="icon-bar"></span>
               </button>
                 <ul>
-                  <li class="active"><a href="javascript:avoid(0);">首页</a>
+                  <li class="active"><a href="{:url('index/index/index')}">首页</a>
                     <!-- <ul>
                       <li><a href="index.html">Home 01</a></li>
                       <li><a href="index-02.html">Home 02</a></li>
@@ -456,39 +460,37 @@
                       <li><a href="index-one-page.html">Home One Page</a></li>
                     </ul> -->
                   </li>
-                  
-                  <li><a href="javascript:avoid(0);">精彩活动</a>
+
+                  <li><a href="{:url('/shoplist/4')}">住宿</a>
                     <ul>
-                      <li><a href="event-grid.html">毕业联谊</a></li>
-                      <li><a href="event-list.html">亲子活动</a></li>
-                      <li><a href="event-detail.html">老年团</a></li>
+                       {volist name='hotel' id="v"}
+                         <li><a href="{:url('/shoplist/4')}">{$v.h_name}</a></li>
+                        {/volist}
                     </ul>
                   </li>
-                  <li><a href="javascript:avoid(0);">景点</a>
+
+                  <li><a href="{:url('/shoplist/5')}">旅游线路</a>
                     <ul>
-                      <li><a href="course-grid.html">人文</a></li>
-                      <li><a href="course-grid-style-02.html">自然</a></li>
-                      <li><a href="course-grid-with-sidebar.html">红色</a></li>
-                      <li><a href="course-listing.html">Courses List</a></li>
-                      <li><a href="course-detail.html">Courses Detail</a></li>
+                        {volist name='routes' id="v"}
+                        <li><a href="event-grid.html">{$v.h_name}</a></li>
+                        {/volist}
                     </ul>
                   </li>
-                  <li><a href="javascript:avoid(0);">美食</a>
+                  <li><a href="{:url('/shoplist/1')}">景区</a>
                     <ul>
-                      <li><a href="blog-grid.html">Blog Grid</a></li>
-                      <li><a href="blog-listing.html">Blog List</a></li>
-                      <li><a href="blog-single.html">Blog Single</a></li>
-                      <li><a href="blog-detail.html">Blog Detail</a></li>
+                        {volist name='scenery' id="v"}
+                        <li><a href="event-grid.html">{$v.h_name}</a></li>
+                        {/volist}
                     </ul>
                   </li>
-                  <li><a href="javascript:avoid(0);">商城</a>
-                    <ul>
-                      <li><a href="shop-product-01.html">旅游套餐</a></li>
-                      <li><a href="shop-product-02.html">特产美食</a></li>
-                      <li><a href="shop-detail.html"> 酒店住宿</a></li>
-                      <li><a href="shop-detail.html"> 导游服务</a></li>
-                    </ul>
-                  </li>
+
+                    <li><a href="{:url('/shoplist/6')}">特产美食</a>
+                        <ul>
+                            {volist name='food' id="v"}
+                            <li><a href="event-grid.html">{$v.h_name}</a></li>
+                            {/volist}
+                        </ul>
+                    </li>
                   <li><a href="javascript:avoid(0);">资讯</a>
                     <ul>
                       <li><a href="javascript:avoid(0);">404 Pages</a>
@@ -1388,6 +1390,9 @@
     </div>
     <!--Main Content Wrap End-->
 {/block}
+
+
+ {block name='footer'}
     <!--Footer Wrap Start-->
     <footer>
       <!--Newletter Wrap Start-->
@@ -1507,7 +1512,7 @@
       <!--Copyright Wrap Start-->
     </footer>
     <!--Footer Wrap End-->
-
+      {/block}
     <!--Back to Top Wrap Start-->
     <div class="back-to-top" >
         <a href="#home">Top</a>
@@ -1557,9 +1562,9 @@
   <script src="/static/app/index/js/city-picker.js"></script>
   <script src="/static/app/index/js/main.js"></script>
   <!--聊天室-->
-  <!--<script type="text/javascript" src="/static/app/index/js/socket.io.js"></script>-->
 
   {block name='myjs'}
+  <!--<script type="text/javascript" src="/static/app/index/js/socket.io.js"></script>-->
   <script type="text/javascript">
       $('.online').click(function(){
           $('#chat').css('display','block');
